# phylanx_plugin

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt  con_plugin.cpp  con_plugin.hpp  constants_of_nature.cpp  constants_of_nature.hpp
